	* New 'setup haddock' option: '--for-hackage' (#2852).
	* New --show-detail=direct; like streaming, but allows the test
	  program to detect that is connected to a terminal, and works
	  reliable with a non-threaded runtime (#2911, and serves as a
	  work-around for #2398)
	* Library support for multi-instance package DBs (#2948).
	* Improved the './Setup configure' solver (#3082, #3076).

1.22.0.0 Johan Tibell <johan.tibell@gmail.com> January 2015
	* Support GHC 7.10.
	* Experimental support for emitting DWARF debug info.
	* Preliminary support for relocatable packages.
	* Allow cabal to be used inside cabal exec enviroments.
	* hpc: support mutliple "ways" (e.g. profiling and vanilla).
	* Support GHCJS.
	* Improved command line documentation.
	* Add '-none' constraint syntax for version ranges (#2093).
	* Make the default doc index file path compiler/arch/os-dependent
	(#2136).
	* Warn instead of dying when generating documentation and hscolour
	isn't installed (455f51622fa38347db62197a04bb0fa5b928ff17).
	* Support the new BinaryLiterals extension
	(1f25ab3c5eff311ada73c6c987061b80e9bbebd9).
	* Warn about 'ghc-prof-options: -auto-all' in 'cabal check' (#2162).
	* Add preliminary support for multiple instances of the same package
	version installed side-by-side (#2002).
	* New binary build config format - faster build times (#2076).
	* Support module thinning and renaming (#2038).
	* Add a new license type: UnspecifiedLicense (#2141).
	* Remove support for Hugs and nhc98 (#2168).
	* Invoke 'tar' with '--formar ustar' if possible in 'sdist' (#1903).
	* Replace --enable-library-coverage with --enable-coverage, which
	enables program coverage for all components (#1945).
	* Suggest that `ExitFailure 9` is probably due to memory
	exhaustion (#1522).
	* Drop support for Haddock < 2.0 (#1808, #1718).
	* Make 'cabal test'/'cabal bench' build only what's needed for
	running tests/benchmarks (#1821).