@@ -63,7 +63,7 @@ import Distribution.Version
 import Distribution.Simple.Utils as Utils
          ( warn, notice, info, debug, die )
 import Distribution.Simple.Setup
-         ( AllowNewer(..), isAllowNewer )
+         ( isAllowNewer )
 import Distribution.System
          ( Platform )
 import Distribution.Text ( display )
@@ -86,8 +86,7 @@ chooseCabalVersion configFlags maybeVersion =
   where
     -- Cabal < 1.19.2 doesn't support '--exact-configuration' which is needed
     -- for '--allow-newer' to work.
-    allowNewer = fromFlagOrDefault False $
-                 fmap isAllowNewer (configAllowNewer configFlags)
+    allowNewer = isAllowNewer (configAllowNewer configFlags)
 
     defaultVersionRange = if allowNewer
                           then orLaterVersion (Version [1,19,2] [])
@@ -289,8 +288,7 @@ planLocalPackage verbosity comp platform configFlags configExFlags
         fromFlagOrDefault False $ configBenchmarks configFlags
 
       resolverParams =
-          removeUpperBounds (fromFlagOrDefault AllowNewerNone $
-                             configAllowNewer configFlags)
+          removeUpperBounds (configAllowNewer configFlags)
 
         . addPreferences
             -- preferences from the config file or command line
