@@ -19,6 +19,8 @@
 	  work-around for #2398)
 	* Library support for multi-instance package DBs (#2948).
 	* Improved the './Setup configure' solver (#3082, #3076).
+	* The '--allow-newer' option can be now used with './Setup
+	configure' (#3163).
 
 1.22.0.0 Johan Tibell <johan.tibell@gmail.com> January 2015
 	* Support GHC 7.10.
